--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: base
 permalink: /404.html
 
 ---
-<div>
+<div style="text-align:center;">
   <h1>404</h1>
   <img src="images/error404.png" />
   <h3>Even the best search engine couldn't find what you are looking for.</h3>
