--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: /404.html
 ---
 <div style="text-align:center;">
   <h1>404</h1>
-  <img src="images/error404.png" />
+  <img src="/images/error404.png" />
   <h3>Even the best search engine couldn't find what you are looking for.</h3>
 </div>
