--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@ layout: base
     {% endunless %}
     {% endfor %}
     <section class="pagination" style="text-align:center">
+      {% if paginator.next_page %}
+        <a href="{{ site.baseurl }}/page{{ paginator.next_page }}" class="btn btn-outline">< Older</a>
+      {% endif %}
       {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
-        <a href="{{ site.baseurl }}" class="btn btn-outline">‹ Newer</a>
+        <a href="{{ site.baseurl }}" class="btn btn-outline">Newer ></a>
         {% else %}
-        <a href="{{ site.baseurl }}/page{{ paginator.previous_page }}" class="btn btn-outline">‹ Newer</a>
+        <a href="{{ site.baseurl }}/page{{ paginator.previous_page }}" class="btn btn-outline">Newer ></a>
         {% endif %}
-      {% endif %}
-      {% if paginator.next_page %}
-        <a href="{{ site.baseurl }}/page{{ paginator.next_page }}" class="btn btn-outline">Older ›</a>
       {% endif %}
     </section>
 </article>
