It all started here!
here's a base of a new page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Fine open source project built with love by Coveo Folks
+<!--
+,adPPYba,  ,adPPYba,  8b       d8  ,adPPYba,  ,adPPYba,
+a8"     "" a8"     "8a `8b     d8' a8P_____88 a8"     "8a
+8b         8b       d8  `8b   d8'  8PP""""""" 8b       d8
+"8a,   ,aa "8a,   ,a8"   `8b,d8'   "8b,   ,aa "8a,   ,a8"
+`"Ybbd8"'  `"YbbdP"'      "8"      `"Ybbd8"'  `"YbbdP"'
+                                                    - open-source hub v0.0.0
+
+Fine open source project built with ♥ by Coveo Folks
+find out more on this at https://github.com/Coveo/coveo.github.io
+
+or better! join the team http://careers.coveo.com/
+-->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>OpenSource @ Coveo</title>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+<link rel="stylesheet" href="/stylesheets/main.css" media="screen">
+
+
+<!-- TODO: content -->
+<section>
+
+  Fine open source project built with ♥ by Coveo Folks
+  <!-- join the team -->
+</section>
+<section>
+  <!--
+  // Lets have some stats
+  // n of repos
+  // n of languages
+  // gigs of code
+  // time since last commit
+  // graph for most popular languages
+  -->
+</section>
+<section>
+  <!--
+  Project name
+  #n of stars
+  description
+  last commit
+  view on github link
+  -->
+</section>
+
+<!-- TODO: Scripts -->
+<script src="/scripts/main.js"></script>
+<!-- Google analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+//  ga('create', 'UA-55172705-1', 'auto');
+//  ga('send', 'pageview');
+</script>
