Here's the beginning of a nice page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ a8"     "" a8"     "8a `8b     d8' a8P_____88 a8"     "8a
 8b         8b       d8  `8b   d8'  8PP""""""" 8b       d8
 "8a,   ,aa "8a,   ,a8"   `8b,d8'   "8b,   ,aa "8a,   ,a8"
 `"Ybbd8"'  `"YbbdP"'      "8"      `"Ybbd8"'  `"YbbdP"'
+
                                                     - open-source hub v0.0.0
 
 Fine open source project built with ♥ by Coveo Folks
@@ -15,36 +16,35 @@ or better! join the team http://careers.coveo.com/
 <meta name="viewport" content="width=device-width">
 <title>OpenSource @ Coveo</title>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/stylesheets/main.css" media="screen">
 
-
 <!-- TODO: content -->
-<section>
 
-  Fine open source project built with ♥ by Coveo Folks
-  <!-- join the team -->
-</section>
-<section>
-  <!--
+<div class="container">
+
+  <header class="page-header">
+    <h1 class="page-header__title">Open Source @ Coveo</h1>
+    <p class="page-header__slogan">Fine open source projects built with ♥ by Coveo folks</p>
+  </header>
+</div>
+<!--
+  //join the team
+
   // Lets have some stats
   // n of repos
   // n of languages
   // gigs of code
   // time since last commit
   // graph for most popular languages
-  -->
-</section>
-<section>
-  <!--
+
   Project name
   #n of stars
   description
   last commit
   view on github link
   -->
-</section>
 
-<!-- TODO: Scripts -->
 <script src="/scripts/main.js"></script>
 <!-- Google analytics -->
 <script>
