--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ a8"     "" a8"     "8a `8b     d8' a8P_____88 a8"     "8a
 "8a,   ,aa "8a,   ,a8"   `8b,d8'   "8b,   ,aa "8a,   ,a8"
 `"Ybbd8"'  `"YbbdP"'      "8"      `"Ybbd8"'  `"YbbdP"'
 
-                                                    - open-source hub v0.0.0
+                                            - open-source hub v0.0.0
 
-Fine open source project built with ♥ by Coveo Folks
+Fine open source projects built with ☕ by Coveo folks
 find out more on this at https://github.com/Coveo/coveo.github.io
 
 or better! join the team http://careers.coveo.com/
@@ -19,40 +19,138 @@ or better! join the team http://careers.coveo.com/
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/stylesheets/main.css" media="screen">
 
-<!-- TODO: content -->
+<header class="page-header">
+  <div class="container">
+    <h1 class="page-header__title">Open Source <span class="accent">@</span> Coveo</h1>
+    <p class="page-header__slogan">Fine open source projects built with <span class="accent">☕</span> by Coveo folks</p>
+  </div>
+</header>
 
-<div class="container">
+<section class="section section--reverse">
+  <div class="container flex section__stats">
 
-  <header class="page-header">
-    <h1 class="page-header__title">Open Source @ Coveo</h1>
-    <p class="page-header__slogan">Fine open source projects built with ♥ by Coveo folks</p>
-  </header>
-</div>
-<!--
-  //join the team
 
-  // Lets have some stats
-  // n of repos
-  // n of languages
-  // gigs of code
-  // time since last commit
-  // graph for most popular languages
+    <div>
+      <h2>Statistics</h2>
+      <globalstats></globalstats>
+    </div>
+    <div>
+      <langstats></langstats>
 
-  Project name
-  #n of stars
-  description
-  last commit
-  view on github link
-  -->
+    <div>
+  </div>
+</section>
+<section class="section">
+  <div class="container section__projects">
+    <h2 class="projects__title">Projects</h2>
+      <!-- For each project -->
+    <projects class="flex section__projects"></projects>
+  </div>
+</section>
 
-<script src="/scripts/main.js"></script>
-<!-- Google analytics -->
+<footer class="section section--reverse">
+  <div class="container">
+    <p>Come Work with <a href="http://careers.coveo.com">us</a></p>
+  </div>
+</footer>
+
+<!-- Riot.js Templates https://muut.com/riotjs/ -->
+<script type="riot/tag">
+
+  <globalstats>
+    <ul class="stat">
+      <li><span class="stat__number">{ stats.repositories }</span> public repos</li>
+      <li><span class="stat__number">{ Object.keys(stats.languages).length }</span> languages</li>
+      <li><span class="stat__number">{ stats.size }  </span> total bytes of code</li>
+      <li><span class="stat__number">{ stats.openIssues}</span> open issues</li>
+    </ul>
+    this.on('update',function(){
+      this.stats = CoveoOpenSource.getStats()
+    });
+  </globalstats>
+
+  <langstats>
+    <ul class="stat">
+      <li each={language in sortedLanguages}>{ language.name } <span class="stat__number">{ language.size }</span> bytes</li>
+    </ul>
+    this.on('update',function(){
+      var languages = this.languages = CoveoOpenSource.getStats().languages
+      this.sortedLanguages = Object.keys(languages).sort(function(a, b){
+          return languages[a] - languages[b];
+      }).reverse().map(function(l){
+        return {name:l, size:languages[l]}
+      }).slice(0,5);
+    });
+  </langstats>
+
+
+  <projects>
+    <project each="{ projects }" class="project"/>
+
+    this.on('update',function(){
+      this.projects = CoveoOpenSource.getRepositories()
+    });
+  </projects>
+
+  <project>
+    <h1 class="project__title">
+    <a href="{ html_url }">{ name }</a>
+    </h1>
+    <div class="project__stars" data-stars="{ stargazers_count }">{ stargazers_count } ★</div>
+    <div class="project__description">{ description }</div>
+    <div class="project__commit-graph">
+    <svg width="100%" height="100%" viewBox="0 0 100 100" x="0" y="0" preserveAspectRatio="none">
+      <g transform="matrix(1,0,0,-1,0,100)">
+        <path fill="black" d="{ path }"/>
+      </g>
+    </svg>
+    </div>
+
+    //this.path="M 0,0 L 100,100 L 100,0"
+    var project = this;
+
+    this.on('update',function(){
+      if(!this.punchcard){return}
+
+      var entries = project.punchcard.length;
+      var maxValue=0;
+
+      project.punchcard.forEach(function(hour){
+        if(hour[2]>maxValue){ maxValue=hour[2]; }
+      });
+
+      project.path = "M 0,0" + project.punchcard.map(function(hour){
+        var x = (hour[0] * 23 + hour[1])*100/entries
+        var y = 100*hour[2]/maxValue;
+        return "L "+x+","+y;
+      }).join(" ") + "L 100,0";
+    });
+  </project>
+</script>
+
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (function(i,s,o,g,r,a,m){
+    i['GoogleAnalyticsObject']=r;
+    i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-//  ga('create', 'UA-55172705-1', 'auto');
-//  ga('send', 'pageview');
+  ga('create', 'UA-61860222-1', 'auto');
+  ga('send', 'pageview');
 </script>
+<script>
+
+  (function(k,r,y,p,t,o,n){
+    k.CoveoAnalytics=t;k[t]=k[t]||function(){(k[t].q=k[t].q||[]).push(arguments)};
+    k[t].t=1*new Date();o=r.createElement(y);o.async=1;o.src=p;
+    n = r.getElementsByTagName(y)[0];n.parentNode.insertBefore(o,n);
+  })(window,document,'script','//static.cloud.coveo.com/coveo.analytics.js/latest/coveo.analytics.js','coveoua');
+
+  coveoua('init','fddbf715-2a87-477d-acd4-a552e760633e');
+  coveoua('send','pageView');
+
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/reqwest/1.1.5/reqwest.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.0.14/riot+compiler.js"></script>
+<script src="/scripts/main.js"></script>
