--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ or better! join the team http://careers.coveo.com/
 
 <footer class="section section--reverse">
   <div class="container">
-    <p>Come Work with <a href="http://careers.coveo.com">us</a></p>
+    <p class="center"><a href="http://coveo.com">Coveo</a> Open Source<br/>come Work with <a href="http://careers.coveo.com">us</a></p>
   </div>
 </footer>
 
