--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ or better! join the team http://careers.coveo.com/
     <ul class="stat">
       <li><span class="stat__number">{ stats.repositories }</span> public repos</li>
       <li><span class="stat__number">{ Object.keys(stats.languages).length }</span> languages</li>
-      <li><span class="stat__number">{ stats.size }  </span> total bytes of code</li>
+      <li><span class="stat__number">{ stats.size }  </span> total kb of code</li>
       <li><span class="stat__number">{ stats.openIssues}</span> open issues</li>
     </ul>
     this.on('update',function(){
