--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 ---
 layout: base
 permalink: /404.html
-
 ---
+
 <div style="text-align:center;">
   <h1>404</h1>
-  <img src="/images/error404.png" />
+  <img src="{{ site.baseurl }}/images/error404.png" />
   <h3>Even the best search engine couldn't find what you are looking for.</h3>
 </div>
