--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <div class="illustration">
     <div class="container">
-        <img src="{{ site.github.url }}/images/illustration-full.png" alt="">
+        <img src="{{ site.github.url }}/images/illustration-full.png" alt="Tech Blog">
     </div>
 </div>
 
