On Brand Styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ sitemap: false
 </div>
 
 
-<article class="container">
+<article class="container posts">
 {% for post in paginator.posts %}
   {% unless post.draft %}
     <section class="index">
